feat: add a processing button on admin view
